--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,53 @@
 /*font-family: 'Montserrat', sans-serif;*/
 body{
-	margin:0;
+	margin:0 auto;
+	font-family: 'Montserrat', sans-serif;
 }
 
 video{
 	width: 100%;
+	position: absolute;
+	bottom: 50px;
 	z-index: -1;
 }
+
+#menu{
+	position: fixed;
+	top:0;
+}
+
+.logo{
+	width:60px;
+	height: 40px;
+
+}
+
+.menu{
+	display: flex;
+	
+}
+
+ul{
+	display: flex;
+	
+}
+
+li{
+	display: flex; 
+	flex-flow: row;
+	justify-content: space-between;
+	
+
+}
+
+a{
+	text-decoration:none;
+	color: white;
+	font-weight: bolder;
+}
+
+div img{
+	width: 100%;
+
+}
+
