Creamos nuestro footer y las propiedades de sus elementos, ademas al video le quitamos propiedades que interferían con el posicionamiento del footer.

--- a/css/common.css
+++ b/css/common.css
@@ -2,3 +2,15 @@
 	display: flex;
 }
 
+.foot{
+	height: 200px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	padding: 30px;
+}
+
+.letra{
+	text-decoration:none;
+	color: white;
+}
