--- a/css/main.css
+++ b/css/main.css
@@ -86,9 +86,9 @@ footer{
 	background-color: #333447;
 	position: absolute;
 	bottom: -5;
-
 }
 
+/* Links */
 .links-container{ /* Espacio en el que se acomodarán los divs */
 	justify-content: space-around;
 	width: 80%;
@@ -112,6 +112,30 @@ footer{
 
 .title:hover{
 	text-decoration: underline;
+	color: white;
+}
+
+/* Última sección del footer */
+.total-copy{
+	width: 100%;
+	justify-content: center;
+}
+
+.cont-copy{
+	width: 60%;
+	height: 20px;
+	justify-content: center;
+	border-bottom: 1px solid white;
+}
+
+.iconos{
+	width: 30%;
+	height: 150%;
+	justify-content: space-between;
+	color:white;
+}
+
+.copy{
 	color: white;
 }
 
